--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               alt="Portfolio Website Launching Soon"
             />
           </figure>
-          <h1 class="holding-page-title">PSophia Spanos McGill</h1>
+          <h1 class="holding-page-title">Sophia Spanos McGill</h1>
         </a>
       </div>
       <div class="holding-page-footer">
