--- a/work.html
+++ b/work.html
@@ -32,7 +32,7 @@
       </header>
       <div class="hero-headline-wrapper">
         <h1 class="stroke-shadow">
-          Hello there 
+          i just want to be part of your symphony 
         </h1>
       </div>
       <footer class="hero-footer">
