--- a/work.html
+++ b/work.html
@@ -189,7 +189,7 @@
         <p class="fineprint">
           &copy; 2020-2024. Hand crafted with
           <span class="heart">❤</span>
-          by James Neufeld.
+          by Sophia Spanos McGill.
         </p>
       </li>
     </ul>
