--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
         </ul>
       </header>
       <div class="hero-headline-wrapper">
-        <h1 class="stroke-shadow">
+        <h1 class=<h1>
           illustration & concept art 
         </h1>
       </div>
