--- a/work.html
+++ b/work.html
@@ -179,8 +179,8 @@
       <li class="footer-item-3">
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
-          <li class="social-item"><a href="#">https://www.instagram.com/sophspanart/</a></li>
-          <li class="social-item"><a href="#">www.linkedin.com/in/sophiaspanosmcgill</a></li>
+          <li class="social-item"><a href="https://www.instagram.com/sophspanart/">Insta</a></li>
+          <li class="social-item"><a href="www.linkedin.com/in/sophiaspanosmcgill">LinkedIn</a></li>
           <li class="social-item"><a href="#">Behance</a></li>
         </ul>
       </li>
