--- a/project-1.html
+++ b/project-1.html
@@ -25,9 +25,7 @@
     <aside class="project-aside">
       <div class="project-info">
         <h1 class="project-title">The Temptation</h1>
-        <p class="project-description">Character development for an 80’s retelling of the myth of Pandora’s box
-          . The background colors are only to
-          show you the <em>.project-aside</em> and <em>.project-details</em> boxes.</p>
+        <p class="project-description">Character development for an 80’s retelling of the myth of Pandora’s box. 
         <p class="project-description">This is a sticky sidebar (<em>.project-aside</em>) so that your project title and
           description remain
           visible as you scroll down the page. To remove the sticky sidebar, see <em>Sidebar on Large Devices</em> in
