--- a/project-1.html
+++ b/project-1.html
@@ -26,10 +26,9 @@
       <div class="project-info">
         <h1 class="project-title">The Temptation</h1>
         <p class="project-description">Character development for an 80’s retelling of the myth of Pandora’s box. 
-        <p class="project-description">This is a sticky sidebar (<em>.project-aside</em>) so that your project title and
-          description remain
-          visible as you scroll down the page. To remove the sticky sidebar, see <em>Sidebar on Large Devices</em> in
-          style.css.</p>
+        <p class="project-description">When high school juniors and detention buddies Pandora “Andy” and  Epimetheus “Theo” decide to avenge the unfair suspension of Prometheus “Prince” (Theo’s brother) they only plan to enact childish vandalism upon the principal's office after hours. They don’t expect to stumble across a strange boombox in Mr. Zen’s office and surely don’t expect to turn it on accidentally. 
+          When a sudden string of strange deaths around the quiet neighbourhood of Olympus abruptly takes place after their discovery, Andy and Theo are forced to take action - whether they want to or not - and put a lid on this evil they seem to have unleashed.
+          </p>
       </div>
       <ul class="project-navigation">
         <li class="arrow"><a href="#" class="navigation-arrow"><i class="fas fa-arrow-left fa-2x"></i></a></li>
