--- a/project-2.html
+++ b/project-2.html
@@ -23,13 +23,9 @@
   <div class="project-wrapper">
     <aside class="project-aside">
       <div class="project-info">
-        <h1 class="project-title">The Title Of Your Project</h1>
-        <p class="project-description">A brief description of your project goes here. The background colors are only to
-          show you the <em>.project-aside</em> and <em>.project-details</em> boxes.</p>
-        <p class="project-description">This is a sticky sidebar (<em>.project-aside</em>) so that your project title and
-          description remain
-          visible as you scroll down the page. To remove the sticky sidebar, see <em>Sidebar on Large Devices</em> in
-          style.css.</p>
+        <h1 class="project-title">Regulus Rex and the Coral Crown</h1>
+        <p class="project-description">Character design of an underwater medieval turtle kingdom</p>
+        <p class="project-description">The underwater turtle kingdom of Rex is a quiet one. Ruled over by a fair and just ruler, Regulus, the land has only known peace. Then, one day, a foreign empress arrives at the castle gates, demanding the return of a sacred object - claiming it as her ancestor's and accusing the Rex family of having stolen it. All eyes turn to Regulus. Will he make the right choice? Or will his insistence on honouring tradition, abiding by history and living in entitlement risk the very turtles he had vowed to protect? 
       </div>
       <ul class="project-navigation">
         <li class="arrow"><a href="project-1.html" class="navigation-arrow"><i class="fas fa-arrow-left fa-2x"></i></a>
