--- a/work.html
+++ b/work.html
@@ -56,8 +56,8 @@
             </figure>
             <a href="project-1.html">
               <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Branding &amp; Illustration</h4>
+                <h1 class="overlay-title">The Temptation</h1>
+                <h4 class="overlay-description"> Character Design</h4>
               </div>
             </a>
           </li>
@@ -67,8 +67,8 @@
             </figure>
             <a href="project-2.html">
               <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Interactive</h4>
+                <h1 class="overlay-title">Regulus Rex &amp; the coral crown</h1>
+                <h4 class="overlay-description">Character & Prop Design</h4>
               </div>
             </a>
           </li>
@@ -78,8 +78,8 @@
             </figure>
             <a href="project-1.html">
               <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Packaging</h4>
+                <h1 class="overlay-title">Handlebars</h1>
+                <h4 class="overlay-description">Character Design, Prop Design &amp; Storyboards </h4>
               </div>
             </a>
           </li>
@@ -89,35 +89,12 @@
             </figure>
             <a href="project-1.html">
               <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Fine Art</h4>
+                <h1 class="overlay-title">Prophecy of the Phoenix</h1>
+                <h4 class="overlay-description">Character Design &amp; World Building</h4>
               </div>
             </a>
           </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/pawel-czerwinski.jpg"
-                alt="Describe your project" />
-            </figure>
-            <a href="project-1.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Illustration</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg" alt="Describe your project" />
-            </figure>
-            <a href="project-1.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Add Your Category</h4>
-              </div>
-            </a>
-          </li>
+
         </ul>
       </section>
     </main>
@@ -126,33 +103,14 @@
       <li class="footer-item-1">
         <h2>About Me</h2>
         <p>
-          A highly customizable portfolio starter template with a big hero for your branding and intro. The work page is
-          based on
-          <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">CSS Grid</a>
-          . The project page has a sticky sidebar. Beginngers can add their own logo,
-          <a href="https://fonts.google.com/" target="_blank">custom typography</a>
-          , custom colours, custom hover states, custom cursor, and more.
-        </p>
-        <p>
-          Customize the hero and footer. Make something randomly fly across the screen! Experiment with
-          <a href="https://mycolor.space/gradient" target="_blank">animated gradients</a>
-          , animated GIFs, and
-          <a href="https://www.svgator.com/" target="_blank">animated SVGs</a>
-          ! Add your own typewriter effect, parallax effect or custom effects and easter eggs! Consider adding a
-          <a href="play.html">Play</a>
-          page or
-          <a href="resume.html">resume</a>
-          . Don't forget to customize your
-          <a href="404.html">404 Error Page</a>
-          and optimize your page titles and descriptions for SEO!
+          I'm a Vancouver-based illustrator and animation nerd. I have a knack for visualizing concepts, idea generation and shape language. If there’s anything I love more than art, it’s stories. I strive to create narratives wherever possible, crafting a funny recounting of an event for her friends, writing story concepts in coffee shops, shooting the occasional short film and doodling little comics.
         </p>
       </li>
       <li class="footer-item-2">
         <h2>Awards &amp; Recognition</h2>
         <ul class="awards-list">
-          <li class="award-item"><a href="#">Award goes here</a></li>
-          <li class="award-item"><a href="#">Recognition goes here</a></li>
-          <li class="award-item"><a href="#">Award goes here</a></li>
+          <li class="award-item"><a href="https://rgd.ca/hiring-designers/award-winners/2022-rgd-student-awards-winners">Honourable mention for the RGD Quake award for creative innovation (2022)</a></li>
+          <li class="award-item"><a href="#">Student Spotlight</a></li>
         </ul>
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
