--- a/work.html
+++ b/work.html
@@ -110,7 +110,7 @@
         <h2>Awards &amp; Recognition</h2>
         <ul class="awards-list">
           <li class="award-item"><a href="https://rgd.ca/hiring-designers/award-winners/2022-rgd-student-awards-winners">Honourable mention for the RGD Quake award for creative innovation (2022)</a></li>
-          <li class="award-item"><a href="#">Student Spotlight</a></li>
+          <li class="award-item"><a href="https://www.ideaschoolofdesign.com/stories/2022/3/walking-into-the-classroom-feels-magical-for-first-year-student-sophia-spanos-mcgill-idea-grad-2025">Student Spotlight</a></li>
         </ul>
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
