--- a/work.html
+++ b/work.html
@@ -32,7 +32,7 @@
       </header>
       <div class="hero-headline-wrapper">
         <h1 class=h1>
-          illustration & concept art 
+          concept art & illustration
         </h1>
       </div>
       <footer class="hero-footer">
