--- a/work.html
+++ b/work.html
@@ -31,9 +31,7 @@
         </ul>
       </header>
       <div class="hero-headline-wrapper">
-        <h1 class=h1>
-          concept art & illustration
-        </h1>
+        <h1>concept art & illustration</h1>
       </div>
       <footer class="hero-footer">
         <ul class="hero-footer-navigation">
