--- a/work.html
+++ b/work.html
@@ -18,7 +18,7 @@
       <header class="hero-header">
         <ul class="branding-navigation">
           <li>
-            <a href="work.html" class="custom-navigation">Work</a>
+            <a href="work.html" class="custom-navigation">WORK</a>
           </li>
           <li class="logo">
             <a href="index.html">
@@ -26,7 +26,7 @@
             </a>
           </li>
           <li>
-            <a href="about.html" class="custom-navigation">About</a>
+            <a href="about.html" class="custom-navigation">ABOUT</a>
           </li>
         </ul>
       </header>
