--- a/work.html
+++ b/work.html
@@ -32,6 +32,7 @@
       </header>
       <div class="hero-headline-wrapper">
         <h1>concept art & illustration</h1>
+        <h3>subtitle</h3>
       </div>
       <footer class="hero-footer">
         <ul class="hero-footer-navigation">
