--- a/work.html
+++ b/work.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Free Creative Portfolio Template: Mar 2024 Version | Work Page</title>
+    <title>
+      Free Creative Portfolio Template: Mar 2024 Version | Work Page
+    </title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!" />
+      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="screenshot.jpg" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
-    <script src="https://kit.fontawesome.com/d300c2ea15.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/d300c2ea15.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
@@ -22,7 +31,10 @@
           </li>
           <li class="logo">
             <a href="index.html">
-              <img src="assets/branding-images/logo.svg" alt="Describe your image" />
+              <img
+                src="assets/branding-images/logo.svg"
+                alt="Describe your image"
+              />
             </a>
           </li>
           <li>
@@ -40,7 +52,9 @@
             <a href="#" class="custom-navigation">Instagram</a>
           </li>
           <li>
-            <a href="mailto:james@magnetude.com" class="custom-navigation">Email</a>
+            <a href="mailto:james@magnetude.com" class="custom-navigation"
+              >Email</a
+            >
           </li>
         </ul>
       </footer>
@@ -51,18 +65,24 @@
         <ul class="grid">
           <li class="work-page-grid-item">
             <figure>
-              <img src="assets/temp/first-name-last-name--project-title--category-3.jpg" alt="Describe your project" />
+              <img
+                src="assets/temp/first-name-last-name--project-title--category-3.jpg"
+                alt="Describe your project"
+              />
             </figure>
             <a href="project-1.html">
               <div class="overlay">
                 <h1 class="overlay-title">The Temptation</h1>
-                <h4 class="overlay-description"> Character Design</h4>
+                <h4 class="overlay-description">Character Design</h4>
               </div>
             </a>
           </li>
           <li class="work-page-grid-item">
             <figure>
-              <img src="assets/temp/first-name-last-name--project-title--category-1.jpg" alt="Describe your project" />
+              <img
+                src="assets/temp/first-name-last-name--project-title--category-1.jpg"
+                alt="Describe your project"
+              />
             </figure>
             <a href="project-2.html">
               <div class="overlay">
@@ -73,27 +93,36 @@
           </li>
           <li class="work-page-grid-item">
             <figure>
-              <img src="assets/temp/first-name-last-name--project-title--category-2.jpg" alt="Describe your project" />
+              <img
+                src="assets/temp/first-name-last-name--project-title--category-2.jpg"
+                alt="Describe your project"
+              />
             </figure>
             <a href="project-1.html">
               <div class="overlay">
                 <h1 class="overlay-title">Handlebars</h1>
-                <h4 class="overlay-description">Character Design, Prop Design &amp; Storyboards </h4>
+                <h4 class="overlay-description">
+                  Character Design, Prop Design &amp; Storyboards
+                </h4>
               </div>
             </a>
           </li>
           <li class="work-page-grid-item">
             <figure>
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg" alt="Describe your project" />
+              <img
+                src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg"
+                alt="Describe your project"
+              />
             </figure>
             <a href="project-1.html">
               <div class="overlay">
                 <h1 class="overlay-title">Prophecy of the Phoenix</h1>
-                <h4 class="overlay-description">Character Design &amp; World Building</h4>
+                <h4 class="overlay-description">
+                  Character Design &amp; World Building
+                </h4>
               </div>
             </a>
           </li>
-
         </ul>
       </section>
     </main>
@@ -102,14 +131,30 @@
       <li class="footer-item-1">
         <h2>About Me</h2>
         <p>
-          I'm a Vancouver-based illustrator and animation nerd. I have a knack for visualizing concepts, idea generation and shape language. If there’s anything I love more than art, it’s stories. I strive to create narratives wherever possible, crafting a funny recounting of an event for her friends, writing story concepts in coffee shops, shooting the occasional short film and doodling little comics.
+          I'm a Vancouver-based illustrator and animation nerd. I have a knack
+          for visualizing concepts, idea generation and shape language. If
+          there’s anything I love more than art, it’s stories. I strive to
+          create narratives wherever possible, crafting a funny recounting of an
+          event for her friends, writing story concepts in coffee shops,
+          shooting the occasional short film and doodling little comics.
         </p>
       </li>
       <li class="footer-item-2">
         <h2>Awards &amp; Recognition</h2>
         <ul class="awards-list">
-          <li class="award-item"><a href="https://rgd.ca/hiring-designers/award-winners/2022-rgd-student-awards-winners">Honourable mention for the RGD Quake award for creative innovation (2022)</a></li>
-          <li class="award-item"><a href="https://www.ideaschoolofdesign.com/stories/2022/3/walking-into-the-classroom-feels-magical-for-first-year-student-sophia-spanos-mcgill-idea-grad-2025">Student Spotlight</a></li>
+          <li class="award-item">
+            <a
+              href="https://rgd.ca/hiring-designers/award-winners/2022-rgd-student-awards-winners"
+              >Honourable mention for the RGD Quake award for creative
+              innovation (2022)</a
+            >
+          </li>
+          <li class="award-item">
+            <a
+              href="https://www.ideaschoolofdesign.com/stories/2022/3/walking-into-the-classroom-feels-magical-for-first-year-student-sophia-spanos-mcgill-idea-grad-2025"
+              >Student Spotlight</a
+            >
+          </li>
         </ul>
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
@@ -119,7 +164,9 @@
             <a href="work-clean.html">Work Page (Clean Version)</a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-clean-flier.html">Work Page (Clean Version with Flier)</a>
+            <a href="work-clean-flier.html"
+              >Work Page (Clean Version with Flier)</a
+            >
           </li>
           <li class="footer-nav-item">
             <a href="work-grayscale.html">Work Page (Grayscale Filter)</a>
@@ -136,9 +183,16 @@
       <li class="footer-item-3">
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
-          <li class="social-item"><a href="https://www.instagram.com/sophspanart/">Insta</a></li>
-          <li class="social-item"><a href="www.linkedin.com/in/sophiaspanosmcgill">LinkedIn</a></li>
-          <li class="social-item"><a href="#">Behance</a></li>
+          <li class="social-item">
+            <a href="https://instagram.com/sophspanart/" target="_blank"
+              >Insta</a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://linkedin.com/in/sophiaspanosmcgill" target="_blank"
+              >LinkedIn</a
+            >
+          </li>
         </ul>
       </li>
       <li class="footer-item-4">
@@ -156,7 +210,10 @@
     </div>
 
     <div class="flier">
-      <img src="assets/branding-images/smiley-face.svg" alt="Describe your image" />
+      <img
+        src="assets/branding-images/smiley-face.svg"
+        alt="Describe your image"
+      />
     </div>
 
     <script>
