--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
                 alt="Describe your project"
               />
             </figure>
-            <a href="project-1.html">
+            <a href="p1pthetemptation-1.html">
               <div class="overlay">
                 <h1 class="overlay-title">The Temptation</h1>
                 <h4 class="overlay-description">Character Design</h4>
@@ -84,7 +84,7 @@
                 alt="Describe your project"
               />
             </figure>
-            <a href="project-2.html">
+            <a href="p2regulusrex.html">
               <div class="overlay">
                 <h1 class="overlay-title">Regulus Rex &amp; the coral crown</h1>
                 <h4 class="overlay-description">Character & Prop Design</h4>
@@ -98,7 +98,7 @@
                 alt="Describe your project"
               />
             </figure>
-            <a href="project-1.html">
+            <a href="p3handlebars.html">
               <div class="overlay">
                 <h1 class="overlay-title">Handlebars</h1>
                 <h4 class="overlay-description">
@@ -114,7 +114,7 @@
                 alt="Describe your project"
               />
             </figure>
-            <a href="project-1.html">
+            <a href="p4prophecyofthephoenix.html">
               <div class="overlay">
                 <h1 class="overlay-title">Prophecy of the Phoenix</h1>
                 <h4 class="overlay-description">
@@ -159,23 +159,17 @@
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
           <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-          <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
           <li class="footer-nav-item">
-            <a href="work-clean.html">Work Page (Clean Version)</a>
+            <a href="p1pthetemptation-1.html">The Temptation</a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-clean-flier.html"
-              >Work Page (Clean Version with Flier)</a
-            >
+            <a href="p2regulusrex.html">Regulus Rex</a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-grayscale.html">Work Page (Grayscale Filter)</a>
+            <a href="p3handlebars.html">Handlebars</a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-ghost.html">Work Page (Ghost Flying Icon)</a>
-          </li>
-          <li class="footer-nav-item">
-            <a href="project-1.html">Project Page</a>
+            <a href="p4prophecyofthephoenix.html">Prophecy of the Phoenix</a>
           </li>
           <li class="footer-nav-item"><a href="about.html">About</a></li>
         </ul>
@@ -206,7 +200,7 @@
     </ul>
 
     <div id="myID" class="bottomMenu hide">
-      <a href="#">Back to top</a>
+      <a href="#">From the top</a>
     </div>
 
     <div class="flier">
