--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -32,8 +32,8 @@
           </p>
       </div>
       <ul class="project-navigation">
-        <li class="arrow"><a href="#" class="navigation-arrow"><i class="fas fa-arrow-left fa-2x"></i></a></li>
-        <li class="arrow"><a href="project-2.html" class="navigation-arrow"><i class="fas fa-arrow-right fa-2x"></i></a>
+        <li class="arrow"><a href="p4prophecyofthephoenix.html" class="navigation-arrow"><i class="fas fa-arrow-left fa-2x"></i></a></li>
+        <li class="arrow"><a href="p2regulusrex.html" class="navigation-arrow"><i class="fas fa-arrow-right fa-2x"></i></a>
         </li>
       </ul>
     </aside>
@@ -75,4 +75,104 @@
   </script>
 </body>
 
+</html>
+
+<ul class="global-footer">
+  <li class="footer-item-1">
+    <h2>About Me</h2>
+    <p>
+      I'm a Vancouver-based illustrator and animation nerd. I have a knack
+      for visualizing concepts, idea generation and shape language. If
+      there’s anything I love more than art, it’s stories. I strive to
+      create narratives wherever possible, crafting a funny recounting of an
+      event for her friends, writing story concepts in coffee shops,
+      shooting the occasional short film and doodling little comics.
+    </p>
+  </li>
+  <li class="footer-item-2">
+    <h2>Awards &amp; Recognition</h2>
+    <ul class="awards-list">
+      <li class="award-item">
+        <a
+          href="https://rgd.ca/hiring-designers/award-winners/2022-rgd-student-awards-winners"
+          >Honourable mention for the RGD Quake award for creative
+          innovation (2022)</a
+        >
+      </li>
+      <li class="award-item">
+        <a
+          href="https://www.ideaschoolofdesign.com/stories/2022/3/walking-into-the-classroom-feels-magical-for-first-year-student-sophia-spanos-mcgill-idea-grad-2025"
+          >Student Spotlight</a
+        >
+      </li>
+    </ul>
+    <h2>Selected Works</h2>
+    <ul class="footer-nav-list">
+      <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
+      <li class="footer-nav-item">
+        <a href="p1pthetemptation-1.html">The Temptation</a>
+      </li>
+      <li class="footer-nav-item">
+        <a href="p2regulusrex.html">Regulus Rex</a>
+      </li>
+      <li class="footer-nav-item">
+        <a href="p3handlebars.html">Handlebars</a>
+      </li>
+      <li class="footer-nav-item">
+        <a href="p4prophecyofthephoenix.html">Prophecy of the Phoenix</a>
+      </li>
+      <li class="footer-nav-item"><a href="about.html">About</a></li>
+    </ul>
+  </li>
+  <li class="footer-item-3">
+    <h2>Contact &amp; Social</h2>
+    <ul class="socials-list">
+      <li class="social-item">
+        <a href="https://instagram.com/sophspanart/" target="_blank"
+          >Insta</a
+        >
+      </li>
+      <li class="social-item">
+        <a href="https://linkedin.com/in/sophiaspanosmcgill" target="_blank"
+          >LinkedIn</a
+        >
+      </li>
+    </ul>
+  </li>
+  <li class="footer-item-4">
+    <p><a href="#top">Smooth scroll to the top</a></p>
+    <p class="fineprint">
+      &copy; 2020-2024. Hand crafted with
+      <span class="heart">❤</span>
+      by Sophia Spanos McGill.
+    </p>
+  </li>
+</ul>
+
+<div id="myID" class="bottomMenu hide">
+  <a href="#">From the top</a>
+</div>
+
+<div class="flier">
+  <img
+    src="assets/branding-images/smiley-face.svg"
+    alt="Describe your image"
+  />
+</div>
+
+<script>
+  myID = document.getElementById("myID");
+
+  var myScrollFunc = function () {
+    var y = window.scrollY;
+    if (y >= 800) {
+      myID.className = "bottomMenu show";
+    } else {
+      myID.className = "bottomMenu hide";
+    }
+  };
+
+  window.addEventListener("scroll", myScrollFunc);
+</script>
+</body>
 </html>
