--- a/p3handlebars.html
+++ b/p3handlebars.html
@@ -28,9 +28,9 @@
         <p class="project-description">One summer, sudden friends and the innocence of youth. When a girl from far away visits the enigmatic and cryptic town of Bartreng, a friendship blooms between her and a local girl. Joined by their love of biking, they set off to enjoy the summer of a lifetime. Unbeknownst to them, neither of them will be the same again 
       </div>
       <ul class="project-navigation">
-        <li class="arrow"><a href="project-1.html" class="navigation-arrow"><i class="fas fa-arrow-left fa-2x"></i></a>
+        <li class="arrow"><a href="p4prophecyofthephoenix.html" class="navigation-arrow"><i class="fas fa-arrow-left fa-2x"></i></a>
         </li>
-        <li class="arrow"><a href="#" class="navigation-arrow"><i class="fas fa-arrow-right fa-2x"></i></a></li>
+        <li class="arrow"><a href="p2regulusrex.html" class="navigation-arrow"><i class="fas fa-arrow-right fa-2x"></i></a></li>
       </ul>
     </aside>
     <main class="project-details">
@@ -44,69 +44,99 @@
   <ul class="global-footer">
     <li class="footer-item-1">
       <h2>About Me</h2>
-      <p>A highly customizable portfolio starter template with a big hero for your branding and intro. The work page is
-        based on
-        <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank"></a>CSS Grid</a>. The project
-        page has a sticky sidebar. Beginngers can add their own logo, <a href="https://fonts.google.com/"
-          target="_blank"></a>custom
-        typography</a>, custom colours, custom hover states, custom cursor, and more.
+      <p>
+        I'm a Vancouver-based illustrator and animation nerd. I have a knack
+        for visualizing concepts, idea generation and shape language. If
+        there’s anything I love more than art, it’s stories. I strive to
+        create narratives wherever possible, crafting a funny recounting of an
+        event for her friends, writing story concepts in coffee shops,
+        shooting the occasional short film and doodling little comics.
       </p>
-      <p>Customize the hero and footer. Make something randomly fly across the screen! Experiment with <a
-          href="https://mycolor.space/gradient" target="_blank">animated gradients</a>, animated GIFs, and <a
-          href="https://www.svgator.com/" target="_blank">animated SVGs</a>! Add your own typewriter effect, parallax
-        effect or custom effects and easter eggs! Consider adding a <a href="play.html">Play</a> page or <a
-          href="resume.html">resume</a>. Don't forget to customize your <a href="404.html">404 Error Page</a> and
-        optimize your page titles and descriptions for SEO!</p>
     </li>
     <li class="footer-item-2">
       <h2>Awards &amp; Recognition</h2>
       <ul class="awards-list">
-        <li class="award-item"><a href="#">Award goes here</a></li>
-        <li class="award-item"><a href="#">Recognition goes here</a></li>
-        <li class="award-item"><a href="#">Award goes here</a></li>
+        <li class="award-item">
+          <a
+            href="https://rgd.ca/hiring-designers/award-winners/2022-rgd-student-awards-winners"
+            >Honourable mention for the RGD Quake award for creative
+            innovation (2022)</a
+          >
+        </li>
+        <li class="award-item">
+          <a
+            href="https://www.ideaschoolofdesign.com/stories/2022/3/walking-into-the-classroom-feels-magical-for-first-year-student-sophia-spanos-mcgill-idea-grad-2025"
+            >Student Spotlight</a
+          >
+        </li>
       </ul>
       <h2>Selected Works</h2>
       <ul class="footer-nav-list">
         <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-        <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
-        <li class="footer-nav-item"><a href="work-clean.html">Work Page (Clean Version)</a></li>
-        <li class="footer-nav-item"><a href="work-clean-flier.html">Work Page (Clean Version with Flier)</a></li>
-        <li class="footer-nav-item"><a href="work-grayscale.html">Work Page (Grayscale Filter)</a></li>
-        <li class="footer-nav-item"><a href="work-ghost.html">Work Page (Ghost Flying Icon)</a></li>
-        <li class="footer-nav-item"><a href="project-1.html">Project Page</a></li>
+        <li class="footer-nav-item">
+          <a href="p1pthetemptation-1.html">The Temptation</a>
+        </li>
+        <li class="footer-nav-item">
+          <a href="p2regulusrex.html">Regulus Rex</a>
+        </li>
+        <li class="footer-nav-item">
+          <a href="p3handlebars.html">Handlebars</a>
+        </li>
+        <li class="footer-nav-item">
+          <a href="p4prophecyofthephoenix.html">Prophecy of the Phoenix</a>
+        </li>
         <li class="footer-nav-item"><a href="about.html">About</a></li>
       </ul>
     </li>
     <li class="footer-item-3">
       <h2>Contact &amp; Social</h2>
       <ul class="socials-list">
-        <li class="social-item"><a href="#">Insta</a></li>
-        <li class="social-item"><a href="#">LinkedIn</a></li>
-        <li class="social-item"><a href="#">Behance</a></li>
+        <li class="social-item">
+          <a href="https://instagram.com/sophspanart/" target="_blank"
+            >Insta</a
+          >
+        </li>
+        <li class="social-item">
+          <a href="https://linkedin.com/in/sophiaspanosmcgill" target="_blank"
+            >LinkedIn</a
+          >
+        </li>
       </ul>
     </li>
     <li class="footer-item-4">
       <p><a href="#top">Smooth scroll to the top</a></p>
-      <p class="fineprint">&copy; 2020-2024. Hand crafted with <span class="heart">❤</span> by James Neufeld.</p>
+      <p class="fineprint">
+        &copy; 2020-2024. Hand crafted with
+        <span class="heart">❤</span>
+        by Sophia Spanos McGill.
+      </p>
     </li>
   </ul>
 
-  <div id="myID" class="bottomMenu hide"><a href="project-1.html">Previous Project</a></div>
+  <div id="myID" class="bottomMenu hide">
+    <a href="#">From the top</a>
+  </div>
 
-  <script type="text/javascript">
+  <div class="flier">
+    <img
+      src="assets/branding-images/smiley-face.svg"
+      alt="Describe your image"
+    />
+  </div>
+
+  <script>
     myID = document.getElementById("myID");
 
     var myScrollFunc = function () {
       var y = window.scrollY;
       if (y >= 800) {
-        myID.className = "bottomMenu show"
+        myID.className = "bottomMenu show";
       } else {
-        myID.className = "bottomMenu hide"
+        myID.className = "bottomMenu hide";
       }
     };
 
     window.addEventListener("scroll", myScrollFunc);
   </script>
 </body>
-
 </html>
