--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@
   </head>
 
   <body class="work-page">
-    <section class="hero gradient-animation">
+    <section class="animated-gradient">
       <header class="hero-header">
         <ul class="branding-navigation">
           <li>
@@ -110,7 +110,7 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg"
+                src="assets/POTP/sophia-spanos-mcgill-phoenix-bird-vulture-goddess-digital-painting.jpg"
                 alt="Describe your project"
               />
             </figure>
