--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -16,7 +16,7 @@
   <header class="hero-header">
     <ul class="branding-navigation">
       <li><a href="work.html" class="custom-navigation">Work</a></li>
-      <li class="logo"><a href="index.html"><img src="assets/branding-images/logo.svg" alt="Describe your image"></a>
+      <li class="logo"><a href="index.html"><img src="assets/branding-images/SophLogo2024.svg" alt="Describe your image"></a>
       </li>
       <li><a href="about.html" class="custom-navigation">About</a></li>
     </ul>
@@ -38,21 +38,14 @@
       </ul>
     </aside>
     <main class="project-details">
-      <div class="project-image"><img src="assets/project-1/birthday-1.png" width="800" height="800"
+      <div class="project-image"><img src="assets/TT/TTanimationfinal.gif" width="1920" height="1080"
+        alt="A description of the image"></div>
+      <div class="project-image"><img src="assets/TT/sophia-spanos-mcgill-pandoras-box-80s-character-design-pose-sheet.jpg" width="1920" height="1080"
           alt="A description of the image"></div>
-      <div class="project-image"><img src="assets/project-1/birthday-2.png" width="800" height="800"
+      <div class="project-image"><img src="assets/TT/sophia-spanos-mcgill-pandoras-box-80s-character-design-expression-sheet.jpg" width="1920" height="1080"
           alt="A description of the image"></div>
-      <div class="project-image"><img src="assets/project-1/birthday-3.png" width="800" height="800"
+      <div class="project-image"><img src="assets/TT/sophia-spanos-mcgill-pandoras-box-80s-character-design-rendered-character-pandora.jpg" width="1920" height="1080"
           alt="A description of the image"></div>
-      <div class="project-image-container">
-        <div class="project-image"><span class="large-emoji-placeholder">⭐️</span></div>
-        <div class="project-image"><span class="large-emoji-placeholder">🌸</span></div>
-      </div>
-      <div class="project-image"><span class="large-emoji-placeholder">🐙</span></div>
-      <div class="project-image-container">
-        <div class="project-image"><span class="large-emoji-placeholder">🔥</span></div>
-        <div class="project-image"><span class="large-emoji-placeholder">🥑</span></div>
-      </div>
     </main>
 
   </div>
