--- a/work.html
+++ b/work.html
@@ -43,8 +43,8 @@
         </ul>
       </header>
       <div class="hero-headline-wrapper">
-        <h1>concept art & illustration</h1>
-        <h3>Word. Word. Word.</h3>
+        <h1>Sophia Spanos McGill</h1>
+        <h3>Illustration & Concept art</h3>
       </div>
       <footer class="hero-footer">
         <ul class="hero-footer-navigation">
@@ -94,7 +94,7 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/temp/first-name-last-name--project-title--category-2.jpg"
+                src="assets/HNDB/sophia-spanos-mcgill-handlebars-bike-sunset-digital-illustration.jpg"
                 alt="Describe your project"
               />
             </figure>
@@ -110,7 +110,7 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/POTP/sophia-spanos-mcgill-prophecy-of-the-phoenix-goddess-vulture-bird-digital-illustration-painting-concept-character-art.jpg"
+                src="assets/POTP/sophia-spanos-mcgill-phoenix-bird-vulture-goddess-digital-painting.jpg"
                 alt="Describe your project"
               />
             </figure>
