--- a/work.html
+++ b/work.html
@@ -43,7 +43,7 @@
         </ul>
       </header>
       <div class="hero-headline-wrapper">
-        <h1>Sophia Spanos McGill</h1>
+        <h1>SOPHIA SPANOS MCGILL</h1>
         <h3>Illustration & Concept art</h3>
       </div>
       <footer class="hero-footer">
@@ -66,7 +66,7 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/TT/sophia-spanos-mcgill-pandoras-box-80s-character-design.jpg"
+                src="assets/TT/sophia-spanos-mcgill-pandoras-box-80s-character-design-cropped.jpg"
                 alt="Describe your project"
               />
             </figure>
@@ -80,7 +80,7 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/temp/first-name-last-name--project-title--category-1.jpg"
+                src="assets/RR/sophia-spanos-mcgill-regulus-rex-student-project-digital-illustration-project.jpg"
                 alt="Describe your project"
               />
             </figure>
