--- a/about.html
+++ b/about.html
@@ -30,10 +30,12 @@
       <p>Clone this project from <a
           href="https://github.com/jamesdneufeld/portfolio-2022">github.com/jamesdneufeld/portfolio-2022</a>.</p>
       <h3>Testimonials</h3>
-      <p>&lsquo;Coding is like learning a language. When you immerse yourself in it it’s challenging at first, and
-        gradually more and more rewarding. If you’re at all interested in the mechanics of the tools we use every day
-        it’s well worth your time to do some hand coding, even if you don’t see yourself doing it professionally.&rsquo;
-        — IDEA Grad 2022</p>
+      <p>&lsquo; I'm a Vancouver-based illustrator and animation nerd. I have a knack
+        for visualizing concepts, idea generation and shape language. If
+        there’s anything I love more than art, it’s stories. I strive to
+        create narratives wherever possible, crafting a funny recounting of an
+        event for her friends, writing story concepts in coffee shops,
+        shooting the occasional short film and doodling little comics.</p>
     </li>
     <li class="about-item-3">
       <h2>Contact &amp; Social</h2>
