--- a/work.html
+++ b/work.html
@@ -20,10 +20,11 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="icon" href="assets/branding-images/BlueSophFavicon.svg" type="image/svg+xml">
   </head>
 
   <body class="work-page">
-    <section class="animated-gradient">
+    <section class="animated-gradient background-hero-animation">
       <header class="hero-header">
         <ul class="branding-navigation">
           <li>
@@ -32,7 +33,7 @@
           <li class="logo">
             <a href="index.html">
               <img
-                src="assets/branding-images/SophLogo2024.svg"
+                src="assets/branding-images/BlueSophLogo2024.svg"
                 alt="Describe your image"
               />
             </a>
@@ -44,7 +45,7 @@
       </header>
       <div class="hero-headline-wrapper">
         <h1>SOPHIA SPANOS MCGILL</h1>
-        <h3>Illustration & Concept art</h3>
+        <h3>filling big shoes with illustration & concept art</h3>
       </div>
       <footer class="hero-footer">
         <ul class="hero-footer-navigation">
