--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -38,7 +38,7 @@
       </ul>
     </aside>
     <main class="project-details">
-      <div class="project-image"><img src="assets/TT/TTanimationfinal.gif" width="1920" height="1080"
+      <div class="project-image"><img src="assets/TT/TTanimation.gif" width="1920" height="1080"
         alt="A description of the image"></div>
       <div class="project-image"><img src="assets/TT/sophia-spanos-mcgill-pandoras-box-80s-character-design-pose-sheet.jpg" width="1920" height="1080"
           alt="A description of the image"></div>
