--- a/work.html
+++ b/work.html
@@ -30,7 +30,7 @@
           <li>
             <a href="work.html" class="custom-navigation">WORK</a>
           </li>
-          <li class="logo">
+          <li class="logo:hover">
             <a href="index.html">
               <img
                 src="assets/branding-images/BlueSophLogo2024.svg"
