--- a/work.html
+++ b/work.html
@@ -30,14 +30,18 @@
           <li>
             <a href="work.html" class="custom-navigation">WORK</a>
           </li>
-          <li class="logo:hover">
+          <li class="logo">
             <a href="index.html">
               <img
                 src="assets/branding-images/BlueSophLogo2024.svg"
                 alt="Describe your image"
               />
+              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 2317.5 276.4" style="enable-background:new 0 0 2317.5 276.4;" xml:space="preserve" class="wordmark">
+
+      <path class="empty" 
             </a>
           </li>
+
           <li>
             <a href="about.html" class="custom-navigation">ABOUT</a>
           </li>
