--- a/work.html
+++ b/work.html
@@ -36,6 +36,8 @@
                 src="assets/branding-images/BlueSophLogo2024.svg"
                 alt="Describe your image"
               />
+              <a id="logo" :hover>
+              </style>
             </a>
           </li>
 
