--- a/work.html
+++ b/work.html
@@ -29,6 +29,7 @@
         <ul class="branding-navigation">
           <li>
             <a href="work.html" class="custom-navigation">WORK</a>
+
           </li>
           <li class="logo">
             <a href="index.html">
@@ -36,8 +37,7 @@
                 src="assets/branding-images/BlueSophLogo2024.svg"
                 alt="Describe your image"
               />
-              <a id="logo" :hover>
-              </style>
+              <a id="logo" :hover></a>
             </a>
           </li>
 
