--- a/work.html
+++ b/work.html
@@ -31,13 +31,13 @@
             <a href="work.html" class="custom-navigation">WORK</a>
 
           </li>
-          <li class="logo">
+          <element class="logo" :hover>
             <a href="index.html">
               <img
                 src="assets/branding-images/BlueSophLogo2024.svg"
                 alt="Describe your image"
               />
-              <a id="logo" :hover></a>
+              
             </a>
           </li>
 
