--- a/work.html
+++ b/work.html
@@ -31,7 +31,8 @@
             <a href="work.html" class="custom-navigation">WORK</a>
 
           </li>
-          <element class="logo" :hover>
+          <li class="logo">
+            <element class="logo" :hover></element>
             <a href="index.html">
               <img
                 src="assets/branding-images/BlueSophLogo2024.svg"
