--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <a href="work.html">
           <figure class="holding-page-animation">
             <img
-              src="assets/temp/holding-page-animation.gif"
+              src="assets/branding-images/BlueSophLogo2024.svg"
               alt="Portfolio Website Launching Soon"
             />
           </figure>
-          <h1 class="holding-page-title">Sophia Spanos McGill</h1>
+          <h1 class="holding-page-title">putting heart and sole into each piece</h1>
         </a>
       </div>
       <div class="holding-page-footer">
