--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="holding-page-wrapper">
       <div class="holding-page-inner-container">
         <a href="work.html">
-          <figure class="holding-page-animation">
+          <figure class="logo">
             <img
               src="assets/branding-images/BlueSophLogo2024.svg"
               alt="Portfolio Website Launching Soon"
@@ -37,7 +37,7 @@
       <div class="holding-page-footer">
         <p class="holding-page-copyright">
           &copy; 2020-2024. Hand crafted with <span class="heart">❤</span> by
-          James Neufeld.
+          Sophia Spanos McGill.
         </p>
       </div>
     </div>
