--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
       </div>
       <div class="holding-page-footer">
         <p class="holding-page-copyright">
-          &copy; 2020-2024. Hand crafted with <span class="heart">❤</span> by
-          Sophia Spanos McGill.
+          &copy; Copyright 2024-2025 Sophia Spanos McGill. All rights reserved.
         </p>
       </div>
     </div>
