updating work page

--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
             <a href="work.html" class="custom-navigation">WORK</a>
           </li>
           <li class="logo">
-            <a href="index.html">
+            <a href="index.hl">
               <img
                 src="assets/branding-images/BlueSophLogo2024.svg"
                 alt="Describe your image"
@@ -46,8 +46,8 @@
         </ul>
       </header>
       <div class="hero-headline-wrapper">
-        <h1>SOPHIA SPANOS MCGILL</h1>
         <h3>filling big shoes with illustration & concept art</h3>
+        <h1>SOPHIA SPANOS MCGILL</h1>
       </div>
       <footer class="hero-footer">
         <ul class="hero-footer-navigation">
@@ -89,7 +89,7 @@
             </figure>
             <a href="p2regulusrex.html">
               <div class="overlay">
-                <h1 class="overlay-title">Regulus Rex &amp; the coral crown</h1>
+                <h1 class="overlay-title">Regulus Rex</h1>
                 <h4 class="overlay-description">Character & Prop Design</h4>
               </div>
             </a>
