--- a/work.html
+++ b/work.html
@@ -46,7 +46,7 @@
         </ul>
       </header>
       <div class="hero-headline-wrapper">
-        <h3>filling big shoes with illustration & concept art</h3>
+        <h3>THE ART OF</h3>
         <h7>SOPHIA SPANOS MCGILL</h7>
       </div>
       <footer class="hero-footer">
