adding the about me section

--- a/work.html
+++ b/work.html
@@ -130,6 +130,16 @@
       </section>
     </main>
 
+    <div>
+     <h1>WHO AM I?</h1>
+     <p>I'm a Vancouver-based illustrator and animation nerd. I have a knack
+      for visualizing concepts, idea generation and shape language. If
+      there’s anything I love more than art, it’s stories. I strive to
+      create narratives wherever possible, crafting a funny recounting of an
+      event for her friends, writing story concepts in coffee shops,
+      shooting the occasional short film and doodling little comics.</p>
+    </div>
+
     <ul class="global-footer">
       <li class="footer-item-1">
         <h2>About Me</h2>
