--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
       </section>
     </main>
 
-    <div>
+    <div class="work-page-central">
      <h1>WHO AM I?</h1>
      <p>I'm a Vancouver-based illustrator and animation nerd. I have a knack
       for visualizing concepts, idea generation and shape language. If
