--- a/work.html
+++ b/work.html
@@ -142,20 +142,15 @@
 
     <ul class="global-footer">
       <li class="footer-item-1">
-        <h2>Awards &amp; Recognition</h2>
-        <ul class="awards-list">
-          <li class="award-item">
-            <a
-              href="https://rgd.ca/hiring-designers/award-winners/2022-rgd-student-awards-winners"
-              >Honourable mention for the RGD Quake award for creative
-              innovation (2022)</a
-            >
-          </li>
-          <li class="award-item">
-            <a
-              href="https://www.ideaschoolofdesign.com/stories/2022/3/walking-into-the-classroom-feels-magical-for-first-year-student-sophia-spanos-mcgill-idea-grad-2025"
-              >Student Spotlight</a
-            >
+        <h2>About Me</h2>
+        <p>
+          I'm a Vancouver-based illustrator and animation nerd. I have a knack
+          for visualizing concepts, idea generation and shape language. If
+          there’s anything I love more than art, it’s stories. I strive to
+          create narratives wherever possible, crafting a funny recounting of an
+          event for her friends, writing story concepts in coffee shops,
+          shooting the occasional short film and doodling little comics.
+        </p>
       </li>
       <li class="footer-item-2">
         <h2>Awards &amp; Recognition</h2>
