--- a/work.html
+++ b/work.html
@@ -71,6 +71,7 @@
               <img
                 src="assets/TT/sophia-spanos-mcgill-pandoras-box-80s-character-design-cropped.jpg"
                 alt="Describe your project"
+                border-radius: 25px;
               />
             </figure>
             <a href="p1pthetemptation-1.html">
