--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
           <li class="logo">
             <a href="index.html"
               ><img
-                src="assets/branding-images/logo.svg"
+                src="assets/branding-images/SophLogo2024.svg"
                 alt="Describe your image"
             /></a>
           </li>
@@ -35,19 +35,16 @@
         </ul>
       </header>
       <div class="hero-headline-wrapper">
-        <h1 class="error-page-title">404 File Not Found</h1>
-        <h2>Create a custom error page that matches your personal brand.</h2>
+        <h1 class="error-page-title">Uh oh...</h1>
+        <h2>It would seem you you've gotten a little lost!</h2>
         <p>
-          The best 404 pages have become an art in themselves. Clever 404 pages
-          almost act like Easter eggs &mdash; hidden treats buried in a site
-          &mdash; and that feeling of having found something unique can overcome
-          the user's frustration of not getting to the page they wanted.
+          Happens to the best of us.
         </p>
         <p>
           See:
           <a
-            href="https://www.creativebloq.com/web-design/best-404-pages-812505"
-            >The best 404 pages for clever web design inspiration</a
+            href="work.html"
+            >Click here to get back on the right path</a
           >
         </p>
       </div>
