--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
       </header>
       <div class="hero-headline-wrapper">
         <h1 class="error-page-title">Uh oh...</h1>
-        <h2>It would seem you you've gotten a little lost!</h2>
+        <h2>It would seem that you've gotten a little lost!</h2>
         <p>
           Happens to the best of us.
         </p>
