updates logo and index

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <a href="work.html">
           <figure class="logo">
             <img
-              src="assets/branding-images/BlueSophLogo2024.svg"
+              src="assets/branding-images/SophLogo2024.svg"
               alt="Portfolio Website Launching Soon"
             />
           </figure>
-          <h1 class="holding-page-title">putting heart and sole into each piece</h1>
+          <h1 class="holding-page-title">come walk a mile in my shoes</h1>
         </a>
       </div>
       <div class="holding-page-footer">
