--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
             <a href="work.html" class="custom-navigation">WORK</a>
           </li>
           <li class="logo">
-            <a href="index.hl">
+            <a href="index.html">
               <img
                 src="assets/branding-images/SophLogo2024.svg"
                 alt="Describe your image"
