updating alignement in index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <figure class="logo">
             <img
               src="assets/branding-images/SophLogo2024.svg"
-              alt="Portfolio Website Launching Soon"
+              alt="Sophia Spanos McGill Black Logo"
             />
           </figure>
           <h1 class="holding-page-title">come walk a mile in my shoes</h1>
