--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/TT/sophia-spanos-mcgill-pandoras-box-80s-character-design-cropped.jpg"
+                src="assets/TT/sophia-spanos-mcgill-pandoras-box-80s-character-design-cropped.jpg" width="1920" height="1080"
                 alt="Describe your project"
                 border-radius: 25px;
               />
