--- a/work.html
+++ b/work.html
@@ -1,16 +1,3 @@
-<div class="cursor">
-  <div class="cursor__ball cursor__ball--big ">
-    <svg height="30" width="30">
-      <circle cx="15" cy="15" r="12" stroke-width="0"></circle>
-    </svg>
-  </div>
-  
-  <div class="cursor__ball cursor__ball--small">
-    <svg height="10" width="10">
-      <circle cx="5" cy="5" r="4" stroke-width="0"></circle>
-    </svg>
-  </div>
-</div>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -97,7 +84,7 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/RR/sophia-spanos-mcgill-regulus-rex-student-project-digital-illustration-project.jpg"
+                src="assets/RR/sophia-spanos-mcgill-regulus-rex-student-project-digital-illustration-project.jpg" width="1920" height="1080"
                 alt="Describe your project"
               />
             </figure>
@@ -111,7 +98,7 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/HNDB/sophia-spanos-mcgill-handlebars-bike-sunset-digital-illustration.jpg"
+                src="assets/HNDB/sophia-spanos-mcgill-handlebars-bike-sunset-digital-illustration.jpg"width="1920" height="1080"
                 alt="Describe your project"
               />
             </figure>
@@ -127,7 +114,7 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/POTP/sophia-spanos-mcgill-phoenix-bird-vulture-goddess-digital-painting.jpg"
+                src="assets/POTP/sophia-spanos-mcgill-phoenix-bird-vulture-goddess-digital-painting.jpg"width="1920" height="1080"
                 alt="Describe your project"
               />
             </figure>
