adjusting the px size of media

--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
     </title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="Sophia Spanos McGill - Illustration and Concept Art"
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
