--- a/work.html
+++ b/work.html
@@ -47,6 +47,7 @@
         </ul>
       </header>
       <div class="hero-headline-wrapper">
+        <img src="assets/branding-images/sophiaspanosmcgill_heropage_illustration.jpg"/>
         <h3>THE ART OF</h3>
         <h1>SOPHIA SPANOS MCGILL</h1>
       </div>
