testing hero image again

--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
   </head>
 
   <body class="work-page">
-    <section class="animated-gradient background-hero-animation">
+    <section class="background-hero-image">
       <header class="hero-header">
         <ul class="branding-navigation">
           <li>
@@ -47,7 +47,6 @@
         </ul>
       </header>
       <div class="hero-headline-wrapper">
-        <img src="assets/branding-images/sophiaspanosmcgill_heropage_illustration.jpg"/>
         <h3>THE ART OF</h3>
         <h1>SOPHIA SPANOS MCGILL</h1>
       </div>
