animated backgroun instead

--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
   </head>
 
   <body class="work-page">
-    <section class="background-hero-image">
+    <section class="animated-gradient">
       <header class="hero-header">
         <ul class="branding-navigation">
           <li>
