HNDB images placed

--- a/p3handlebars.html
+++ b/p3handlebars.html
@@ -34,11 +34,32 @@
       </ul>
     </aside>
     <main class="project-details">
-      <div class="project-image"><span class="large-emoji-placeholder">🐸</span></div>
-      <div class="project-image"><span class="large-emoji-placeholder">🌼</span></div>
-      <div class="project-image"><span class="large-emoji-placeholder">🌵</span></div>
-      <div class="project-image"><span class="large-emoji-placeholder">✨</span></div>
-      <div class="project-image"><span class="large-emoji-placeholder">🕷</span></div>
+      <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_01_heroimage.jpg" width="1920" height="1080"
+        alt="A description of the image"></div>
+      <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_02_story.jpg" width="1920" height="1080"
+          alt="A description of the image"></div>
+     <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_03_characters.jpg" width="1920" height="1080"
+            alt="A description of the image"></div>
+       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_04_characterdevelopment.jpg" width="1920" height="1080"
+              alt="A description of the image"></div>
+        <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_05_samexpressionsheet.jpg" width="1920" height="1080"
+                alt="A description of the image"></div>
+      <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_06_samcharacterturnaround.jpg" width="1920" height="1080"
+                  alt="A description of the image"></div>
+       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_07_noraexpressionsheet.jpg" width="1920" height="1080"
+                    alt="A description of the image"></div>
+       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_08_noraturnaround.jpg" width="1920" height="1080"
+                      alt="A description of the image"></div>
+       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_09_objectsheet.jpg" width="1920" height="1080"
+                        alt="A description of the image"></div>
+        <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_010_storyboards1.jpg" width="1920" height="1080"
+                          alt="A description of the image"></div>
+       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_011_storyboards2.jpg" width="1920" height="1080"
+                            alt="A description of the image"></div>
+       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_012_storyboards3.jpg" width="1920" height="1080"
+                              alt="A description of the image"></div>
+       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_013_establishingvisual.jpg" width="1920" height="1080"
+                                alt="A description of the image"></div>
     </main>
   </div>
   <ul class="global-footer">
