empty spot for index image!

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <a href="work.html">
           <figure class="logo">
             <img
-              src="assets/branding-images/SophLogo2024.svg"
-              alt="Sophia Spanos McGill Black Logo"
+              src=".."
+              alt="alt text"
             />
           </figure>
           <h1 class="holding-page-title">come walk a mile in my shoes</h1>
