--- a/index.html
+++ b/index.html
@@ -23,22 +23,17 @@
 
   <body class="holding-page">
     <div class="holding-page-wrapper">
-        <a href="work.html">
-          <figure class="logo">
-            <img
-              src=".."
-              alt="alt text"
-            />
-          </figure>
-          <h1 class="holding-page-title">come walk a mile in my shoes</h1>
-        </a>
-      </div>
-      <div class="holding-page-footer">
-        <p class="holding-page-copyright">
-          &copy; Copyright 2024-2025 Sophia Spanos McGill. All rights reserved.
-        </p>
-      </div>
+      <a href="work.html">
+        <figure class="logo">
+          <img src="assets/branding-images/SophLogo2024.svg" alt="alt text" />
+        </figure>
+        <h1 class="holding-page-title">come walk a mile in my shoes</h1>
+      </a>
+    </div>
+    <div class="holding-page-footer">
+      <p class="holding-page-copyright">
+        &copy; Copyright 2024-2025 Sophia Spanos McGill. All rights reserved.
+      </p>
     </div>
   </body>
 </html>
-
